Fixed displayBoard and addFenceToData, and changed build.xml to add JavaFX libraries